--- a/templates/create.html
+++ b/templates/create.html
@@ -1,23 +1,18 @@
 {% extends 'base.html' %}
-
+{% block title %} Criar novo post {% endblock %}
 {% block content %}
-<h1>{% block title %} Create a New Post {% endblock %}</h1>
-
-<form method="post">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title"
-               placeholder="Post title" class="form-control"
-               value="{{ request.form['title'] }}"></input>
-    </div>
-
-    <div class="form-group">
-        <label for="content">Content</label>
-        <textarea name="content" placeholder="Post content"
-                  class="form-control">{{ request.form['content'] }}</textarea>
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-</form>
+    <form class="post" method="post">
+        <h2 class="titulo">Criar novo post</h2>
+        <div class="inputs">
+            <label for="title">Titulo:</label>
+            <input type="text" name="title" placeholder="Titulo..." value="{{ request.form['title'] }}"></input>
+        </div>
+        <div class="inputs">
+            <label for="content">Conteúdo:</label>
+            <textarea name="content" placeholder="Seu post...">{{ request.form['content'] }}</textarea>
+        </div>
+        <div>
+            <button type="submit">Criar</button>
+        </div>
+    </form>
 {% endblock %}
