--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,30 +1,23 @@
 {% extends 'base.html' %}
-
+{% block title %} Editar {{ post['title'] }} {% endblock %}
 {% block content %}
-<h1>{% block title %} Edit "{{ post['title'] }}" {% endblock %}</h1>
-
-<form method="post">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title" placeholder="Post title"
-               class="form-control"
-               value="{{ request.form['title'] or post['title'] }}">
+    <form class="post" method="post">
+        <h2 class="titulo">Editar post</h2>
+        <div class="inputs">
+            <label for="title">Titulo:</label>
+            <input type="text" name="title" placeholder="Titulo..." value="{{ request.form['title'] or post['title'] }}"></input>
+        </div>
+        <div class="inputs">
+            <label for="content">Conteúdo:</label>
+            <textarea name="content" placeholder="Seu post...">{{ request.form['content'] or post['content'] }}</textarea>
+        </div>
+        <div>
+            <button type="submit">Editar</button>
+        </div>
+    </form>
+    <form class="delet" action="{{ url_for('delete', id=post['id']) }}" method="POST">
+        <input type="submit" value="Apagar post"
+                onclick="return confirm('Você quer deletar esse post?')">
         </input>
-    </div>
-
-    <div class="form-group">
-        <label for="content">Content</label>
-        <textarea name="content" placeholder="Post content"
-                  class="form-control">{{ request.form['content'] or post['content'] }}</textarea>
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-</form>
-<hr>
-<form action="{{ url_for('delete', id=post['id']) }}" method="POST">
-    <input type="submit" value="Delete Post"
-            class="btn btn-danger btn-sm"
-            onclick="return confirm('Are you sure you want to delete this post?')">
-</form>
+    </form>
 {% endblock %}
