--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ post['title'] }} {% endblock %}</h2>
-    <span class="badge badge-primary">{{ post['created'] }}</span>
-    <p>{{ post['content'] }}</p>
+    <div class="post">
+        <h2 class="titulo">{% block title %} {{ post['title'] }} {% endblock %}</h2>
+        <div class="info">
+            <span class="data">{{ post['created'] }}</span>
+        </div>    
+        <p>{{ post['content'] }}</p>
+    </div>
 {% endblock %}
